<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ingredients">Ingredients</string>
    <string name="app_name">Cupcakes</string>
    <string name="logButton">Log message</string>
    <string name="recipes">Recipes</string>
    <string name="genShopList">Generate Shopping List</string>
    <string name="menus">Menus</string>
    <string name="small_Powdered">teaspoons</string>
    <string name="addButton">Add</string>
    <string name="subtractButton">Use</string>
    <string name="deleteText">Delete Ingredient</string>
    <string name="a_recipe_deleteText">Delete Ingredient</string>
    <string name="newIngredientButton">New Ingredient</string>
    <string name="editAmount">Edit amount</string>
    
</resources>
