<?xml version="1.0" encoding="utf-8"?>
<ScrollView   xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/scrollView1" android:layout_height="fill_parent" android:layout_width="match_parent">
<LinearLayout
  android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
    
    <TableLayout android:layout_weight="1" android:id="@+id/tableLayout1" android:layout_height="0dip" android:layout_width="fill_parent">
        <TableRow android:id="@+id/a_recipe_tableRow1" android:layout_height="wrap_content" android:layout_width="wrap_content">
            <TextView android:layout_width="0dip" android:text="TextView" android:layout_weight="0.5" style="@style/header" android:gravity="left" android:id="@+id/a_recipe_Name" android:layout_height="wrap_content"></TextView>
        </TableRow>
    </TableLayout>
    <ListView android:layout_weight="5" android:layout_width="match_parent" android:id="@+id/a_recipe_ingredient_list" android:layout_height="250dip"></ListView>
    <TableLayout android:layout_weight="1" android:id="@+id/tableLayout2" android:layout_height="0dip" android:layout_width="match_parent">
        <TableRow android:id="@+id/a_recipe_tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
            <Button android:layout_width="0dip" android:layout_height="wrap_content" android:text="@string/newIngredientButton" android:layout_weight="0.25" android:id="@+id/a_recipe_new_ingredient_button"></Button>
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/editAmount" android:id="@+id/a_recipe_edit_button"></Button>
        </TableRow>
    </TableLayout>
    <RelativeLayout android:layout_weight="1" android:id="@+id/relativeLayout1" android:layout_height="0dip" android:layout_width="match_parent">
        <Button android:layout_centerHorizontal="true" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:layout_height="wrap_content" android:text="@string/a_recipe_deleteText" android:id="@+id/a_recipe_deleteButton"></Button>
        <Button android:id="@+id/a_recipe_delete_recipe" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Delete Recipe" android:layout_toRightOf="@+id/a_recipe_deleteButton" android:layout_alignTop="@+id/a_recipe_deleteButton" android:layout_alignBottom="@+id/a_recipe_deleteButton"></Button>
    </RelativeLayout>
    
</LinearLayout>
    </ScrollView>
