<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:layout_weight="1">
    <TableLayout android:layout_marginBottom="50dip" android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:layout_width="wrap_content">
            <TextView android:layout_width="0dip" android:text="" android:layout_weight="0.5" style="@style/header" android:gravity="left" android:id="@+id/ingredientName" android:layout_height="wrap_content"></TextView>
            <TextView android:layout_width="0dip" android:layout_weight="0.5" style="@style/header" android:gravity="right" android:id="@+id/an_ingredient_amount" android:text="" android:layout_height="wrap_content"></TextView>
        </TableRow>
    </TableLayout>
    <TableLayout android:layout_marginBottom="50dip" android:id="@+id/tableLayout2" android:layout_height="wrap_content" android:layout_width="match_parent">
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:layout_width="0dip" android:text="@string/addButton" android:id="@+id/addButton" android:layout_height="wrap_content" android:layout_weight="0.25"></Button>
            <Button android:layout_width="0dip" android:id="@+id/useButton" android:layout_height="wrap_content" android:text="@string/subtractButton" android:layout_weight="0.25"></Button>
            <EditText android:layout_width="0dip" android:numeric="decimal" android:text="" android:hint="#" android:layout_height="wrap_content" android:id="@+id/modifyAmount" android:layout_weight="0.25"></EditText>
            <TextView android:layout_width="0dip" android:gravity="center_vertical" android:id="@+id/unitText" android:text="" android:layout_height="wrap_content" android:layout_weight="0.25"></TextView>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="right">
            <TextView android:layout_width="0dip" android:text="" android:id="@+id/textView1" android:layout_weight="0.75" android:layout_height="wrap_content"></TextView>
        	
        	<ToggleButton android:layout_width="0dip" android:layout_height="wrap_content" android:id="@+id/an_ingredient_sizeMeasure" android:layout_weight="0.25" android:layout_gravity="right"></ToggleButton>
        </TableRow>
    </TableLayout>
    <RelativeLayout android:layout_marginBottom="50dip" android:id="@+id/relativeLayout1" android:layout_height="wrap_content" android:layout_width="match_parent">
        <Button android:layout_centerHorizontal="true" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:layout_height="wrap_content" android:text="@string/deleteText" android:id="@+id/deleteButton"></Button>
    </RelativeLayout>
</LinearLayout>
